ebus Daemon (ebusd) - ChangeLog
===============================

2013-05-27:
* Added timeout to select at main_loop. (thx aloz77 / KNX Forum)

2013-05-25:
* Modified hex Dump (EBH) for active sent messages. (thx Fry / KNX Forum)
* Changed telnet connecting log level info from L_NET to L_DBG.
* Added ability to reopen temporary removed serial device. (thx aloz77 / KNX Forum)
  Attention: If the serial device is removed, network socket will be closed too.
* Removed data output format for executed commands. (thx JuMi2006 / KNX Forum)

2013-05-24:
* Added hex type to eb_cmd_encode_value function. (thx Fry / KNX Forum)

2013-05-17:
* Modified eb_serial_valid function and usage. (thx aloz77 / KNX Forum)

2013-05-16:
* Added ability to restrict tcp connection to localhost. (thx aloz77 / KNX Forum)
* Added skip of negative sleep time while waiting for QQ byte. (thx aloz77 / KNX Forum)

2013-05-05:
* Added function checks whether the FD is still a valid serial device.

2013-04-27:
* Improved csv files read in a way that ebus parts are not case sensitive.
* Added eb_cmd_uppercase function.

2013-04-17:
* Changed error messages from daemon startup vom E_ERR to E_ALL.

2013-04-09:
* Extended signal handler to fit with logrotate / logging facility.
* Added ebusd.logrotate.d file too contrib.
* Added gentoo ebusd.init.d and ebusd.conf.d scripts.
* Reverted logging functions too old behavior.

2013-04-08:
* Logging functions changed so it fits together with the behavior of logrotate.
* Fixed function eb_cmd_search_com_id so it compares class length too.

2013-03-28:
* Fixed daemon crash if some spaces was found behind command (without subcommands.)

2013-03-16:
* Fixed slave message CRC check for cyc messages.

2013-03-15:
* Improved cyc commands data handling so all parts from message could be decoded.
* Added new parameter d_part to element configuration part.
* Updated documantation.
* ebusd.init script (debian) slightly modified.

2013-03-06: